# fast-go-icp

./: .gitignore  CMakeLists.txt  README.md  TODO.md
fgoicp/: CMakeLists.txt  common.cpp  common.hpp  fgoicp.cpp  fgoicp.cu  fgoicp.hpp  icp3d.cu  icp3d.hpp  kdtree_adaptor.cu  kdtree_adaptor.hpp  nnlut.cu  nnlut.hpp  registration.cu  registration.hpp
src/: common.cpp  common.hpp  fgoicp.cpp  fgoicp.cu  fgoicp.hpp  kdtree.cpp  kdtree.cu  kdtree.hpp  kdtree_adaptor.cu  kdtree_adaptor.hpp  main.cpp  main.hpp  registration.cu  registration.hpp  utilities.hpp
test/: bunny.toml  skull_goicp.toml
